force-app/main/default/objects/Copado_AI_Activity_Log__c/Copado_AI_Activity_Log__c.object-meta.xml
<CustomObject>
    <label>Copado AI Activity Log</label>
    <pluralLabel>Copado AI Activity Logs</pluralLabel>
    <nameField>
        <label>Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>LOG-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>