force-app/main/default/objects/Copado_AI_Activity_Log__c/fields/Active_Users__c.field-meta.xml
<CustomField>
    <fullName>Active_Users__c</fullName>
    <label>Active Users</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>