force-app/main/default/objects/Copado_AI_Activity_Log__c/fields/Fetch_Time__c.field-meta.xml
<CustomField>
    <fullName>Fetch_Time__c</fullName>
    <label>Fetch Time</label>
    <type>DateTime</type>
</CustomField>