force-app/main/default/objects/Copado_AI_Activity_Log__c/fields/Total_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Total_Tokens__c</fullName>
    <label>Total Tokens</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>